$Date$

VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/

Version 1.18-31 (opened May 26, 2011)

	* capscale: species scores will be NA if input data were
	dissimilarities and no 'comm' was given. (BTW, if input data were
	dissimilarities, update() will fail! -- I don't know why, but
	anybody can fix this.)

	* oecosimu: reverted r1557 of version 1.18-26, or splitting tied
	values. This was introduced because Chase et al. (Ecosphere 2011,
	http://www.esajournals.org/doi/pdf/10.1890/ES10-00117.1) used this
	in their Raup-Crick index. This is against established practice in
	order statistics and therefore we cancelled this.

	* specaccum: reverted r1505 & 1507, or introduction of weighted
	species accumulation model in version 1.18-23. The method was
	introduced because of user request, but these persons lost their
	interest and therefore there is no reason to see the trouble that
	finalizing these functions would require (see comments on version
	1.18-23 about some of the work needed, and there is more).

Version 1.18-30 (closed May 26, 2011)

	* opened with the release of vegan 1.17-10 on April 27, 2011.

	* nobs: documented nobs() methods for vegan. These seem to be
	needed in R 2.13.0 and should be released soon (there is no need
	to add R >= 2.13.0 dependence as long as we do not use these
 	functions ourselves within released vegan code).

	* treeheight: dramatic simplification and speed-up of the code.

	* scores.cca/rda: failed if user requested only non-existing
	scores. Now return an empty list of scores instead (with possible
	attributes). 

	* prc: several support methods did not work with 'prc' results,
	and these now stop with an informative error instead of an
	uniformative error. Concerns anova.ccabymargin, anova.ccabyaxis,
	drop1.cca, add1.cca, model.frame.cca, model.matrix.cca. This was
	found out after a private user query about having signficance test
	for the sencond PRC axis.
	
Version 1.18-29 (closed April 27, 2011)
