@@ -4,6 +4,10 @@ VEGAN DEVEL VERSIONS at http://r-forge.r-project.org/
 
 Version 1.18-31 (opened May 26, 2011)
 
+	* specnumber: gained argument 'groups' to find total richness
+	within each group. An example shows how to use this to find one
+	index that Whittaker suggested to estimate beta diversity.
+
 	* capscale: species scores will be NA if input data were
 	dissimilarities and no 'comm' was given. (BTW, if input data were
 	dissimilarities, update() will fail! -- I don't know why, but
